--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
     "ng-recaptcha": "^3.0.3",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
