--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.3.1",
     "ng-recaptcha": "^3.0.3",
     "rxjs": "^5.5.6",
+    "slick-carousel": "^1.8.1",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
