--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "ng-recaptcha": "^3.0.3",
+    "ngx-owl-carousel": "^2.0.7",
     "rxjs": "^5.5.6",
     "slick-carousel": "^1.8.1",
     "web-animations-js": "^2.3.1",
